# oak

./: TUTORIAL.md  pyproject.toml  setup.py
.github/workflows/: ubuntu.yml
cpp/: CMakeLists.txt
cpp/include/libpkmn/: client.h  data.h  init.h  log.h  pkmn.h  strings.h
cpp/include/libpkmn/data/: status.h  strings.h  types.h
cpp/include/nn/: affine.h  ffn.h
cpp/include/nn/battle/: network.h
cpp/include/nn/battle/quantized/: affine.h
cpp/include/py/battle/: output-buffer.h  output.h
cpp/include/py/libpkmn/: data.h
cpp/include/util/: argparse.h  battle-frame-buffer.h  file-lock.h  load-teams.h  parse.h  policy.h  team-building.h
cpp/src/: benchmark.cc  dur.cc  generate.cc  log.cc  pyoak.cc  pyoaklog.cc  pyoaknumpy.cc  pyoaksearch.cc  pyoaktrain.cc  search.cc  vs.cc
src/oak/: __init__.py  __init__.pyi  battle.py  common_args.py  evo.py  log.py  numpy.py  rl.py  search.py  torch.py  train.py
src/oak/scripts/: battle.py  build.py  cli.py  evo.py  lab.py  rl.py
