[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oak-lab"
version = "1.1.2"
description = "Oak Python package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "torch>=1.10.0"
]

[project.scripts]
lab = "oak.lab:main"
battle   = "oak.battle:main"
build    = "oak.build:main"
rl       = "oak.rl:main"
evo      = "oak.evo:main"
vs = "oak.cli:vs"
generate = "oak.cli:generate"
benchmark = "oak.cli:benchmark"
chall = "oak.cli:chall"
oak-search-test =  "oak.cli:oak_search_test"
