[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oak-lab"
version = "1.1.2"
description = "Oak Python package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "torch>=1.10.0"
]

[project.scripts]
vs = "oak.scripts.cli:vs"
generate = "oak.scripts.cli:generate"
benchmark = "oak.scripts.cli:benchmark"
chall = "oak.scripts.cli:chall"
oak-search-test =  "oak.scripts.cli:oak_search_test"
